# vm-device

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  coverage_config.json  coverage_config_aarch64.json  coverage_config_x86_64.json
src/: device.rs  device_manager.rs  lib.rs  resources.rs  serial.rs
src/bus/: address.rs  mod.rs  range.rs
src/interrupt/: kvm_irq.rs  legacy.rs  mod.rs  msi.rs
src/interrupt/kvm/: legacy_irq.rs  mod.rs  msi_irq.rs  pci_msi_irq.rs
src/interrupt/kvm_irq/: generic_msi.rs  legacy_irq.rs  mod.rs  msi_irq.rs
vm-allocator/: Cargo.toml  README.md
vm-allocator/src/: address.rs  id.rs  lib.rs  resource.rs  system.rs
